src/tests/fixtures/resolver_context/ContextValueTypedAsNever.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(ctx: never): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueTypedAsNever.invalid.ts:4:17 - error: Unexpected `never` type for resolver argument. If a resolver argument is not needed by the resolver, it may be omitted.

4   greeting(ctx: never): string {
                  ~~~~~
